--- a/_sections/122-E01.html
+++ b/_sections/122-E01.html
@@ -8,7 +8,7 @@ semester: Spring
 <h2>Lecture Notes</h2>
 <div style="padding-left:30px">
   <p>
-    <a href="{% link assets/notes/notes-122.html %}">Spring 2017</a>
+    <a href="{% link notes/122/index.html %}">Spring 2017</a>
   </p>
 </div>
 
