Just kidding. Reorganizing notes again.

--- a/_sections/111-006-17.html
+++ b/_sections/111-006-17.html
@@ -7,7 +7,7 @@ semester: Fall
 
 <h3>Lecture Notes</h3>
 <div style="padding-left:30px">
-  <a href="{% link notes/111/F17/index.html %}">Fall 2017</a>
+  <a href="{% link materials/USC/111/F17/notes.html %}">Fall 2017</a>
 </div>
 
 <h3>Exams</h3>
