--- a/_sections/111-006-15.html
+++ b/_sections/111-006-15.html
@@ -8,7 +8,7 @@ semester: Spring
 <h3>Lecture Notes</h3>
 <div style="padding-left:30px">
   <p>
-    You can find a copy of my notes from class <a href="{% link notes/111/S15/index.html %}">here</a>.
+    You can find a copy of my notes from class <a href="{% link materials/USC/111/S15/notes.html %}">here</a>.
   </p>
 </div>
 
