--- a/construction_zone_compound/index.html
+++ b/construction_zone_compound/index.html
@@ -304,29 +304,29 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </header>
 
   <article>
-    <div style="display:flex; justify-content:center;">
+    <div style="display: flex; justify-content: center; margin-bottom: 0.75rem;">
   <table class="table-hover" style="border-collapse: collapse;">
     <tbody>
       <tr>
-        <td><a href="/assets/img/ConstructionZoneCompound/IMG_3415.png"><img src="/assets/img/ConstructionZoneCompound/IMG_3415.png" width="150"></a></td>
-        <td><a href="/assets/img/ConstructionZoneCompound/IMG_3406.png"><img src="/assets/img/ConstructionZoneCompound/IMG_3406.png" width="150"></a></td>
-        <td><a href="/assets/img/ConstructionZoneCompound/IMG_3407.png"><img src="/assets/img/ConstructionZoneCompound/IMG_3407.png" width="150"></a></td>
+        <td><a href="/assets/img/ConstructionZoneCompound/IMG_3415.png"><img src="/assets/img/ConstructionZoneCompound/IMG_3415.png" style="width:150px; height:150px; object-fit:cover;"></a></td>
+        <td><a href="/assets/img/ConstructionZoneCompound/IMG_3406.png"><img src="/assets/img/ConstructionZoneCompound/IMG_3406.png" style="width:150px; height:150px; object-fit:cover;"></a></td>
+        <td><a href="/assets/img/ConstructionZoneCompound/IMG_3407.png"><img src="/assets/img/ConstructionZoneCompound/IMG_3407.png" style="width:150px; height:150px; object-fit:cover;"></a></td>
       </tr>
       <tr>
-        <td><a href="/assets/img/ConstructionZoneCompound/IMG_3408.png"><img src="/assets/img/ConstructionZoneCompound/IMG_3408.png" width="150"></a></td>
-        <td><a href="/assets/img/ConstructionZoneCompound/IMG_3409.png"><img src="/assets/img/ConstructionZoneCompound/IMG_3409.png" width="150"></a></td>
-        <td><a href="/assets/img/ConstructionZoneCompound/IMG_3411.png"><img src="/assets/img/ConstructionZoneCompound/IMG_3411.png" width="150"></a></td>
+        <td><a href="/assets/img/ConstructionZoneCompound/IMG_3408.png"><img src="/assets/img/ConstructionZoneCompound/IMG_3408.png" style="width:150px; height:150px; object-fit:cover;"></a></td>
+        <td><a href="/assets/img/ConstructionZoneCompound/IMG_3409.png"><img src="/assets/img/ConstructionZoneCompound/IMG_3409.png" style="width:150px; height:150px; object-fit:cover;"></a></td>
+        <td><a href="/assets/img/ConstructionZoneCompound/IMG_3411.png"><img src="/assets/img/ConstructionZoneCompound/IMG_3411.png" style="width:150px; height:150px; object-fit:cover;"></a></td>
       </tr>
       <tr>
-        <td><a href="/assets/img/ConstructionZoneCompound/IMG_3412.png"><img src="/assets/img/ConstructionZoneCompound/IMG_3412.png" width="150"></a></td>
-        <td><a href="/assets/img/ConstructionZoneCompound/IMG_3413.png"><img src="/assets/img/ConstructionZoneCompound/IMG_3413.png" width="150"></a></td>
-        <td><a href="/assets/img/ConstructionZoneCompound/IMG_3414.png"><img src="/assets/img/ConstructionZoneCompound/IMG_3414.png" width="150"></a></td>
+        <td><a href="/assets/img/ConstructionZoneCompound/IMG_3412.png"><img src="/assets/img/ConstructionZoneCompound/IMG_3412.png" style="width:150px; height:150px; object-fit:cover;"></a></td>
+        <td><a href="/assets/img/ConstructionZoneCompound/IMG_3413.png"><img src="/assets/img/ConstructionZoneCompound/IMG_3413.png" style="width:150px; height:150px; object-fit:cover;"></a></td>
+        <td><a href="/assets/img/ConstructionZoneCompound/IMG_3414.png"><img src="/assets/img/ConstructionZoneCompound/IMG_3414.png" style="width:150px; height:150px; object-fit:cover;"></a></td>
       </tr>
       <tr>
-        <td><a href="/assets/img/ConstructionZoneCompound/IMG_3405.png"><img src="/assets/img/ConstructionZoneCompound/IMG_3405.png" width="150"></a></td>
-        <td><a href="/assets/img/ConstructionZoneCompound/IMG_5765.png"><img src="/assets/img/ConstructionZoneCompound/IMG_5765.png" width="150"></a></td>
+        <td><a href="/assets/img/ConstructionZoneCompound/IMG_3405.png"><img src="/assets/img/ConstructionZoneCompound/IMG_3405.png" style="width:150px; height:150px; object-fit:cover;"></a></td>
+        <td><a href="/assets/img/ConstructionZoneCompound/IMG_5765.png"><img src="/assets/img/ConstructionZoneCompound/IMG_5765.png" style="width:150px; height:150px; object-fit:cover;"></a></td>
         <td><a href="/assets/video/build.mov" style="position: relative; display: inline-block;">
-          <img src="/assets/img/ConstructionZoneCompound/thumbnail.png" width="150">
+          <img src="/assets/img/ConstructionZoneCompound/thumbnail.png" style="width:150px; height:150px; object-fit:cover;">
           <span style="position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); font-size:48px; color:white; text-shadow:0 0 10px black;">▶</span>
         </a></td>
       </tr>
